[package]
name = "quinn"
version = "0.5.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>", "Dirkjan Ochtman <dirkjan@ochtman.nl>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/djc/quinn"
description = "QUIC transport protocol implementation for Tokio"
readme = "../README.md"
keywords = ["quic"]
categories = [ "network-programming", "asynchronous" ]
workspace = ".."
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
# Trust the contents of the OS certificate store by default
default = ["native-certs", "certificate-transparency"]
certificate-transparency = ["proto/certificate-transparency"]
native-certs = ["proto/native-certs"]

[badges]
codecov = { repository = "djc/quinn" }
maintenance = { status = "experimental" }
azure-devops = { project = "dochtman/Projects", pipeline = "Quinn", build = "1" }

[dependencies]
bytes = "0.5.2"
err-derive = "0.2"
futures = "0.3.1"
libc = "0.2.49"
mio = "0.6"
proto = { package = "quinn-proto", path = "../quinn-proto", version = "0.5.0" }
rustls = { version = "0.17", features = ["quic"] }
tracing = "0.1.10"
tokio = { version = "0.2.6", features = ["rt-core", "io-driver", "time"] }
webpki = "0.21"

[dev-dependencies]
anyhow = "1.0.22"
crc = "1.8.1"
criterion = "0.3"
directories = "2.0.0"
rand = "0.7"
rcgen = "0.7"
structopt = "0.3.0"
tokio = { version = "0.2.6", features = ["rt-threaded", "time", "macros"] }
tracing-subscriber = "0.2.0"
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
unwrap = "1.2.1"
url = "2"

[[example]]
name = "server"

[[example]]
name = "client"

[[example]]
name = "insecure_connection"
required-features = ["rustls/dangerous_configuration"]

[[bench]]
name = "bench"
harness = false
